# play

./: .gitignore  flake.nix  wordpw
C/strange_size/: .gitignore  i65.c  i65.s  i65.s.s  i7.c  i7.s.s  i8388607.s  sadd.c  sadd.s  sadd.s.s  strange_size.s
cad/openscad/: owen_focus_ring.scad  stamp_holder.scad  stamp_holder_common.scad  stamp_holder_top.scad  zink_printer_gear.scad
dts/: .gitignore  am335x-boneblack-openskies.dts
idris/: .gitignore  Hello.idr
kicad/: .gitignore
kicad/ocean/: fp-lib-table  ocean.bak  ocean.kicad_pcb  ocean.kicad_prl  ocean.kicad_pro  ocean.kicad_sch  ocean.kicad_sym  sym-lib-table
kicad/ocean/3d/: USB4080-03-A.stp  USB4080-03-A.wrl
kicad/ocean/Ocean.pretty/: Texas_UQFN-16_1.8x2.6mm_P0.4mm.kicad_mod  USB_C_Receptacle_GCT_USB4080.kicad_mod
kicad/tc2030-swd/: tc2030-swd.kicad_pcb  tc2030-swd.kicad_prl  tc2030-swd.kicad_pro  tc2030-swd.kicad_sch
kicad/tmp1075/: tmp1075.kicad_pcb  tmp1075.kicad_prl  tmp1075.kicad_pro  tmp1075.kicad_sch
montecarlo/rummicube/: Cargo.toml
montecarlo/rummicube/src/: iteration.rs  main.rs  tests.rs  tile.rs
notebooks/: rolldice.ipynb
rp2040/: .editorconfig  shell.nix
rp2040/scd30/: CMakeLists.txt  scd30.c
rp2040/sht30/: CMakeLists.txt  sht30.c
rp2040/sht30wifi/: CMakeLists.txt  lwipopts.h  main.c  secret.h.example
rust-embedded/: .envrc
rust-embedded/lpc1114-test/: Cargo.toml  Embed.toml  memory.x  openocd.cfg  openocd.gdb
rust-embedded/lpc1114-test/.cargo/: config.toml
rust-embedded/lpc1114-test/src/: main.rs
rust-embedded/lpc111x-pac/: Cargo.toml  device.x  generate.sh
rust-embedded/lpc111x-pac/src/: adc.rs  ct16b0.rs  ct32b0.rs  flashctrl.rs  gpio0.rs  i2c.rs  iocon.rs  lib.rs  pmu.rs  spi0.rs  syscon.rs  uart.rs  wwdt.rs
rust-embedded/lpc111x-pac/src/adc/: cr.rs  dr.rs  gdr.rs  inten.rs  stat.rs
rust-embedded/lpc111x-pac/svd/: LPC111x.yaml
rust-embedded/stm32f4-test/: Cargo.toml
rust-embedded/stm32f4-test/.cargo/: config.toml
rust-embedded/stm32f4-test/src/: main.rs
rust/fe310-test/: Cargo.toml
rust/fe310-test/src/: main.rs
rust/stm32f407-test/: Cargo.toml  memory.x  openocd.gdb  stlink.gdb
rust/stm32f407-test/.cargo/: config
rust/stm32f407-test/src/: main.rs
scripts/: get_discord_emoji.py  pppassword  rename_wii.py  wordpw  ykclip-menu.sh  yuzu2ryujinx.py
typst/: .envrc  label.typ
zephyr/: .envrc
zephyr/blink/: CMakeLists.txt  README.txt
zephyr/ports/: ports.cmake
zephyr/w5500-test/: CMakeLists.txt  prj.conf
zephyr/w5500-test/boards/: rpi_pico.overlay  sparkfun_red_v_things_plus.overlay
zephyr/w5500-test/src/: main.c
(+184 files in other folders)
