[package]
name = "lpc1114-test"
version = "0.1.0"
authors = ["Artemis Tosini <me@artem.ist>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
lpc111x-pac = { path = "../lpc111x-pac" }
panic-semihosting = "0.6"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
