[package]
name = "stm32f407-test"
version = "0.1.0"
authors = ["Artemis Tosini <me@artem.ist>"]
edition = "2018"


[dependencies]
embedded-hal = "0.2"
nb = "0.1.2"
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f407"]

[[bin]]
name = "stm32f407-test"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
